style(Novedades,NabMenu,NavBar,Footer,App.css&index.css): order Novedades: margin NavMenu: simplify button custom styles NavBar: spaces Footer: Align text and create grid to order links App&index: correct default values of buttons

--- a/colvetsal/src/App.css
+++ b/colvetsal/src/App.css
@@ -3,7 +3,7 @@
   height: 100dvh;
   margin: 0;
   text-align: center;
-  font-size: 8px;
+  font-size: 6px;
 }
 
 
