--- a/colvetsal/src/elements/components/NavBar/NavBar.module.css
+++ b/colvetsal/src/elements/components/NavBar/NavBar.module.css
@@ -1,23 +1,11 @@
 .Cont {
+    width: 100dvw;
     position: fixed;
     top: 0;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 1vh 2vw 1vh 2vw;
+    padding: 0 2vw 0 2vw;
     background-color: rgb(0, 0, 0, 0.80);
     z-index: 100;
-}
-#logotipe{
-    display: flex;
-}
-#Title{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    height: fit-content;
-
-}
-.logoCol {
-    width: 3rem;
 }
