--- a/colvetsal/src/index.css
+++ b/colvetsal/src/index.css
@@ -32,24 +32,19 @@ body {
 
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border: 0;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  color: #547590;
+  background-color: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #547590;
@@ -57,8 +52,5 @@ button:focus-visible {
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
